--- a/global.css
+++ b/global.css
@@ -26,4 +26,53 @@ body {
     border-radius: 8px; /* Optional: rounded corners */
   }
 
+  paint: {
+    'line-color': '#32D400',  // A bright green using hex code
+    'line-width': 5,          // Thicker lines
+    'line-opacity': 0.6       // Slightly less transparent
+  }
+
+  #map svg {
+    position: absolute;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+  }
+
+  header {
+    display: flex;
+    align-items: baseline;
+    gap: 1em;
+    padding: 1em;
+    border-bottom: 2px solid #ccc;
+    width: 100%;
+    margin-left: auto;
+  }
+/*   
+  label {
+    display: flex;
+    align-items: center;
+    gap: 0.5em;
+  }
+  
+  div {
+    display: flex;
+    flex-direction: column;
+  } */
+  
+  #selected-time {
+    display: block;
+  }
+  
+  #any-time {
+    display: block;
+    font-style: italic;
+    color: #888;
+  }
+
+
+
+  
+
   
